; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netsmb/extr_smb_dev.c_nsmb_dev_open.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netsmb/extr_smb_dev.c_nsmb_dev_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdev = type { i32 }
%struct.thread = type { i32 }
%struct.smb_dev = type { i32 }

@sdp_dtor = common dso_local global i32 0, align 4
@M_NSMBDEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cdev*, i32, i32, %struct.thread*)* @nsmb_dev_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nsmb_dev_open(%struct.cdev* %0, i32 %1, i32 %2, %struct.thread* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.cdev*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.thread*, align 8
  %10 = alloca %struct.smb_dev*, align 8
  %11 = alloca i32, align 4
  store %struct.cdev* %0, %struct.cdev** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store %struct.thread* %3, %struct.thread** %9, align 8
  %12 = load %struct.cdev*, %struct.cdev** %6, align 8
  %13 = call %struct.smb_dev* @smbdev_alloc(%struct.cdev* %12)
  store %struct.smb_dev* %13, %struct.smb_dev** %10, align 8
  %14 = load %struct.smb_dev*, %struct.smb_dev** %10, align 8
  %15 = load i32, i32* @sdp_dtor, align 4
  %16 = call i32 @devfs_set_cdevpriv(%struct.smb_dev* %14, i32 %15)
  store i32 %16, i32* %11, align 4
  %17 = load i32, i32* %11, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %4
  %20 = load %struct.smb_dev*, %struct.smb_dev** %10, align 8
  %21 = load i32, i32* @M_NSMBDEV, align 4
  %22 = call i32 @free(%struct.smb_dev* %20, i32 %21)
  %23 = load i32, i32* %11, align 4
  store i32 %23, i32* %5, align 4
  br label %25

24:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %25

25:                                               ; preds = %24, %19
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local %struct.smb_dev* @smbdev_alloc(%struct.cdev*) #1

declare dso_local i32 @devfs_set_cdevpriv(%struct.smb_dev*, i32) #1

declare dso_local i32 @free(%struct.smb_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
